--- a/task0002.html
+++ b/task0002.html
@@ -9,6 +9,6 @@
 	<input id="number1" type="text" name="" value="" placeholder="">
 	<input id="number2" type="text" name="" value="" placeholder="">
 	<span id="result"></span>
-	<button id="addbtn">相加</button>
+	<button id="addbtn">相加+</button>
 </body>
 </html>
