--- a/task0002_1.html
+++ b/task0002_1.html
@@ -6,7 +6,14 @@
 	<link rel="stylesheet" type="text/css" href="css/task0002_1.css">
 </head>
 <body>
-	
+	<div class="box">
+		<div class="addBox">
+			<input id="myinput" type="text" placeholder="请输入兴趣爱好">
+			<input id="add" type="button" value="添加">
+			<div class="itemsBox"></div>
+		</div>
+	</div>
+	<script type="text/javascript" src="js/util.js"></script>
 	<script src="js/task0002_1.js" charset="utf-8"></script>
 </body>
 </html>
